# schedulemaker-rewrite

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-06787fe662d15e8ca35f6658d047448c819e566dc8dba98b3256c15b8c33296a.json  query-0c21ff78e2a15b41a146c0576a26127ed9e576cc7dd45c28ff40e91ee2cf031e.json  query-309f96c44710aa7ea23473a06858482431769bfc493190fa0e88d26a6761ffdc.json  query-35c34ab767b8d3b24491a353a0bc36c4bbb1d491f0602c7511acc014e70dd5be.json  query-4ae6d9fc5ab82d19a6dc72aed96681de986ca73c798ffeb1b0942ef284bdc143.json  query-508acf8711d7ca825f09704e7747dbdd541c01cdd388191ed74398eb1e2dd2e0.json  query-5b4c2c4ca6f42c159e175df946d9b9442a92a60ec4fab383a536271edf3ed2e1.json  query-7a9abeb2163387e498e0700dc0841ddfe2b4abf22da3a60f5f9cd620bd441433.json  query-8d72ba0eefbed98c2f178221d0a7bb52e8d7ce45a7b10daf32d76fc310eb2aec.json  query-ade316356817c6e10c306d8280e2a08673d499074d867588925fa93c621bab13.json  query-ae171b3de35e4313026d2b4446f66d3dd1da94c676363a4f8e9cabc74a5bbbae.json  query-b63032f23e47e8c1c8a80ab487e9a7af3c7100f8a95fc8dc1c66227814a66174.json  query-bd2597ba6ce0820350ca7870e4e5928c1c6913b4f6dfeb752924e00b0d5b462c.json  query-c6f57bdba8d23138d372226fd63d2b61db3857d335e58d16aba96f5c2e38b75a.json  query-cc9b5213bb3eedbea5b2fc52476793693eb0fd14aceda4e32c16cbd9b0338a41.json  query-d1defb6ba56d52c4b4656f8c8393b076e64b971a21fcfc94de3a03e159b10ef6.json  (+7 more)
backend/migrations/: 20230714031453_Create_classes.sql  (+3 more)
(+91 files in other folders)
