[package]
name = "course-parser-rs"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
csv = "1.1.1"

[lib]
name = "rit_course_parser"
path = "src/lib.rs"

[[bin]]
name = "rit-course-parser"
path = "src/bin/main.rs"
