[package]
name = "rit-sis-parser"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
csv = "1.1.1"
clap = { version = "4.3.10", features = ["cargo", "derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros"] }
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-test = "0.1.1"
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
serde_json = { version = "1.0.102", features = ["preserve_order"] }
dotenvy = "0.15.7"
typenum = { version = "1.16.0", features = ["force_unix_path_separator"] }
lazy_static = "1.4.0"
